lke/map-rando/maprando-stable.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maprando-web-stable
  labels:
    app: maprando-web-stable
spec:
  replicas: 2
  selector:
    matchLabels:
      app: maprando-web-stable
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: maprando-web-stable
    spec:
      affinity:
        podAntiAffinity:                                 
          requiredDuringSchedulingIgnoredDuringExecution:
          - topologyKey: kubernetes.io/hostname
            labelSelector:                               
              matchLabels:                               
                app: maprando-web-stable
      containers:
      - name: maprando-web-stable
        image: docker.io/bkerby/map-rando:v115c
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        args:
        - "--seed-repository-url"
        - "gs://super-metroid-map-rando-us-central1"
        - "--video-storage-url"
        - "https://map-rando-videos.b-cdn.net"
        resources:
          requests:
            cpu: 200m
            memory: 1.5G
          limits:
            memory: 1.5G
        volumeMounts:
        - name: gcp-key
          mountPath: "/gcp-key.json"
          subPath: service-key
          readOnly: true
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
      volumes:
      - name: gcp-key
        secret:
          secretName: gcloud-storage
      
---

apiVersion: v1
kind: Service
metadata:
  name: maprando-web-stable
spec:
  selector:
    app: maprando-web-stable
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
